@@ -3,8 +3,8 @@
   fixture_sets  => {
     basic => {
       'Artist'  => [
-        [ 'artist_id',  'name', 'title',  'address',      ],
-        [ 1,            'foo',  'Dr',     'Some where 1', ],
+        [ 'artist_id',  'name', 'title',  'address',      'birthday',   ],
+        [ 1,            'foo',  'Dr',     'Some where 1', '2010-06-21', ],
       ],
     },
   },
